--- a/index.html
+++ b/index.html
@@ -3,46 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PIRATE CODER</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Cricket</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <header>
-        <h1>AJAY</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="home">
-            <h2>Home</h2>
-            <p>This is the home section of the website.</p>
-        </section>
-
-        <section id="about">
-            <h2>About</h2>
-            <p>This is the about section of the website.</p>
-        </section>
-
-        <section id="services">
-            <h2>Services</h2>
-            <p>This is the services section of the website.</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>This is the contact section of the website.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 My Simple Website</p>
-    </footer>
+    <div class="login-container">
+        <div class="cricket-ball">
+            <img src="cricket.png" alt="Cricket Ball">
+        </div>
+        <h2 class="login-title">Login</h2>
+        <form id="loginForm" onsubmit="return validateLogin()">
+            <div class="input-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+            </div>
+            <div class="input-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            </div>
+            <button type="submit" class="login-btn">Login</button>
+        </form>
+    </div>
 </body>
 </html>
